--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8994,7 +8994,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/flat.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/flat.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9035,7 +9035,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat, .iradio_flat {
-        background-image: url(../../static/plugins/forms/icheck/flat/flat@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/flat@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9048,7 +9048,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/red.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/red.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9089,7 +9089,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-red, .iradio_flat-red {
-        background-image: url(../../static/plugins/forms/icheck/flat/red@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/red@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9102,7 +9102,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/green.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/green.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9143,7 +9143,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-green, .iradio_flat-green {
-        background-image: url(../../static/plugins/forms/icheck/flat/green@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/green@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9156,7 +9156,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/blue.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/blue.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9197,7 +9197,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-blue, .iradio_flat-blue {
-        background-image: url(../../static/plugins/forms/icheck/flat/blue@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/blue@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9210,7 +9210,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/aero.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/aero.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9251,7 +9251,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-aero, .iradio_flat-aero {
-        background-image: url(../../static/plugins/forms/icheck/flat/aero@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/aero@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9264,7 +9264,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/grey.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/grey.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9305,7 +9305,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-grey, .iradio_flat-grey {
-        background-image: url(../../static/plugins/forms/icheck/flat/grey@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/grey@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9318,7 +9318,7 @@ body {
     padding: 0;
     width: 20px;
     height: 20px;
-    background: url(../../static/plugins/forms/icheck/flat/orange.png) no-repeat;
+    background: url(/static/plugins/forms/icheck/flat/orange.png) no-repeat;
     border: 0;
     cursor: pointer
 }
@@ -9359,7 +9359,7 @@ body {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and(-moz-min-device-pixel-ratio: 1.5), only screen and(-o-min-device-pixel-ratio: 3/2), only screen and (min-device-pixel-ratio: 1.5) {
     .icheckbox_flat-orange, .iradio_flat-orange {
-        background-image: url(../../static/plugins/forms/icheck/flat/orange@2x.png);
+        background-image: url(/static/plugins/forms/icheck/flat/orange@2x.png);
         background-size: 176px 22px
     }
 }
@@ -9776,7 +9776,7 @@ div.tagsinput div {
     font-size: 1px;
     text-decoration: none;
     border: 0;
-    background: url(../../static/plugins/forms/select2/select2.png) right top no-repeat;
+    background: url(/static/plugins/forms/select2/select2.png) right top no-repeat;
     cursor: pointer;
     outline: 0
 }
@@ -9862,7 +9862,7 @@ div.tagsinput div {
     display: block;
     width: 100%;
     height: 100%;
-    background: url(../../static/plugins/forms/select2/select2.png) no-repeat 0 2px
+    background: url(/static/plugins/forms/select2/select2.png) no-repeat 0 2px
 }
 
 .select2-search {
@@ -9889,11 +9889,11 @@ div.tagsinput div {
     border: 1px solid #E7E7E2;
     border-radius: 0;
     box-shadow: none;
-    background: #FFF url(../../static/plugins/forms/select2/select2.png) no-repeat 100% -22px;
-    background: url(../../static/plugins/forms/select2/select2.png) no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #FFF), color-stop(0.99, #EEE));
-    background: url(../../static/plugins/forms/select2/select2.png) no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #FFF 85%, #EEE 99%);
-    background: url(../../static/plugins/forms/select2/select2.png) no-repeat 100% -22px, -webkit-linear-gradient(top, #FFF 85%, #EEE 99%);
-    background: url(../../static/plugins/forms/select2/select2.png) no-repeat 100% -22px, linear-gradient(top, #FFF 85%, #EEE 99%)
+    background: #FFF url(/static/plugins/forms/select2/select2.png) no-repeat 100% -22px;
+    background: url(/static/plugins/forms/select2/select2.png) no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #FFF), color-stop(0.99, #EEE));
+    background: url(/static/plugins/forms/select2/select2.png) no-repeat 100% -22px, -webkit-linear-gradient(center bottom, #FFF 85%, #EEE 99%);
+    background: url(/static/plugins/forms/select2/select2.png) no-repeat 100% -22px, -webkit-linear-gradient(top, #FFF 85%, #EEE 99%);
+    background: url(/static/plugins/forms/select2/select2.png) no-repeat 100% -22px, linear-gradient(top, #FFF 85%, #EEE 99%)
 }
 
 .select2-drop.select2-drop-above .select2-search input {
@@ -9901,11 +9901,11 @@ div.tagsinput div {
 }
 
 .select2-search input.select2-active {
-    background: #FFF url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100%;
-    background: url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #FFF), color-stop(0.99, #EEE));
-    background: url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100%, -webkit-linear-gradient(center bottom, #FFF 85%, #EEE 99%);
-    background: url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100%, -webkit-linear-gradient(top, #FFF 85%, #EEE 99%);
-    background: url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100%, linear-gradient(top, #FFF 85%, #EEE 99%)
+    background: #FFF url(/static/plugins/forms/select2/spinner.gif) no-repeat 100%;
+    background: url(/static/plugins/forms/select2/spinner.gif) no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, #FFF), color-stop(0.99, #EEE));
+    background: url(/static/plugins/forms/select2/spinner.gif) no-repeat 100%, -webkit-linear-gradient(center bottom, #FFF 85%, #EEE 99%);
+    background: url(/static/plugins/forms/select2/spinner.gif) no-repeat 100%, -webkit-linear-gradient(top, #FFF 85%, #EEE 99%);
+    background: url(/static/plugins/forms/select2/spinner.gif) no-repeat 100%, linear-gradient(top, #FFF 85%, #EEE 99%)
 }
 
 .select2-container-active .select2-choice, .select2-container-active .select2-choices {
@@ -10046,7 +10046,7 @@ div.tagsinput div {
 }
 
 .select2-more-results.select2-active {
-    background: #EEE url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100%
+    background: #EEE url(/static/plugins/forms/select2/spinner.gif) no-repeat 100%
 }
 
 .select2-more-results {
@@ -10123,7 +10123,7 @@ div.tagsinput div {
 }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
-    background: #FFF url(../../static/plugins/forms/select2/spinner.gif) no-repeat 100% !important
+    background: #FFF url(/static/plugins/forms/select2/spinner.gif) no-repeat 100% !important
 }
 
 .select2-default {
@@ -10166,7 +10166,7 @@ div.tagsinput div {
     top: 6px;
     font-size: 1px;
     outline: 0;
-    background: url(../../static/plugins/forms/select2/select2.png) right top no-repeat
+    background: url(/static/plugins/forms/select2/select2.png) right top no-repeat
 }
 
 .select2-container-multi .select2-search-choice-close {
@@ -10229,7 +10229,7 @@ div.tagsinput div {
 
 @media only screen and(-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
     .select2-container .select2-choice .select2-arrow b, .select2-container .select2-choice abbr, .select2-search input, .select2-search-choice-close {
-        background-image: url(../../static/plugins/forms/select2/select2x2.png) !important;
+        background-image: url(/static/plugins/forms/select2/select2x2.png) !important;
         background-repeat: no-repeat !important;
         background-size: 60px 40px !important
     }
